--- a/package.json
+++ b/package.json
@@ -4,19 +4,8 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
-    "axios": "^0.21.1",
-    "bootstrap": "^5.0.1",
-    "dompurify": "^2.2.7",
-    "react": "^16.10.2",
-    "react-bootstrap": "^1.6.0",
-    "react-dom": "^16.10.2",
-    "react-icons": "^3.8.0",
-    "react-iframe": "^1.8.0",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.2.0",
-    "redux": "^4.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -26,6 +15,20 @@
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.0",
     "@types/uuid": "^8.0.0",
+    "apexcharts": "^3.26.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
+    "dompurify": "^2.2.7",
+    "react": "^16.10.2",
+    "react-apexcharts": "^1.3.9",
+    "react-bootstrap": "^1.6.0",
+    "react-dom": "^16.10.2",
+    "react-icons": "^3.8.0",
+    "react-iframe": "^1.8.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.2.0",
+    "redux": "^4.1.0",
     "styled-components": "^5.1.1",
     "typescript": "^3.7.5",
     "uuid": "^8.2.0"
